--- a/src/Section/Section.module.css
+++ b/src/Section/Section.module.css
@@ -2,7 +2,7 @@
   width: 250px;
   border: 2px solid black;
   border-radius: 10px;
-
+  box-shadow: inset 4px 3px 9px 3px #797a7c;
   background: burlywood;
 }
 
